# Store-Manager

./: README.md
Store/: CMakeLists.txt  about.cpp  about.h  addcustomers.cpp  addcustomers.h  additem.cpp  additem.h  addtransaction.cpp  addtransaction.h  books.cpp  books.h  broadcastthread.cpp  broadcastthread.h  customerlist.cpp  customerlist.h  customers.cpp  customers.h  magazine.cpp  magazine.h  main.cpp  pdfcreator.cpp  pdfcreator.h  resource.qrc  stock.cpp  stock.h  stockfactory.cpp  stockfactory.h  stocklist.cpp  stocklist.h  store.cpp  store.h  transaction.cpp  transaction.h  xmlwritter.cpp  xmlwritter.h
